--- a/static/index.html
+++ b/static/index.html
@@ -188,33 +188,37 @@
                     <div class="flex items-center gap-2 flex-shrink-0">
 
                         <span class="text-xs text-gray-400 min-w-[60px] text-right">{{ statusMessage }}</span>
-                        <div class="flex bg-gray-100 rounded-lg p-1 gap-1">
-                            <button @click="viewMode = 'edit'"
-                                :class="viewMode === 'edit' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
-                                class="p-1 rounded transition-all" title="Editor Only">
-                                <span class="material-symbols-rounded text-[18px] block">edit_note</span>
+                        <div class="flex items-center gap-2">
+                            <span
+                                class="text-[10px] font-bold text-gray-400 uppercase tracking-widest select-none">View</span>
+                            <div class="flex bg-gray-100 rounded-lg p-1 gap-1">
+                                <button @click="viewMode = 'edit'"
+                                    :class="viewMode === 'edit' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
+                                    class="p-1 rounded transition-all" title="Editor Only">
+                                    <span class="material-symbols-rounded text-[18px] block">edit_note</span>
+                                </button>
+                                <button @click="viewMode = 'split'"
+                                    :class="viewMode === 'split' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
+                                    class="p-1 rounded transition-all" title="Split View">
+                                    <span class="material-symbols-rounded text-[18px] block">vertical_split</span>
+                                </button>
+                                <button @click="viewMode = 'preview'"
+                                    :class="viewMode === 'preview' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
+                                    class="p-1 rounded transition-all" title="Preview Only">
+                                    <span class="material-symbols-rounded text-[18px] block">preview</span>
+                                </button>
+                            </div>
+                            <button @click="toggleDarkMode"
+                                class="p-2 text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg transition-colors"
+                                :title="isDarkMode ? 'Light Mode' : 'Dark Mode'">
+                                <span class="material-symbols-rounded text-[20px]">{{ isDarkMode ? 'light_mode' :
+                                    'dark_mode' }}</span>
                             </button>
-                            <button @click="viewMode = 'split'"
-                                :class="viewMode === 'split' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
-                                class="p-1 rounded transition-all" title="Split View">
-                                <span class="material-symbols-rounded text-[18px] block">vertical_split</span>
-                            </button>
-                            <button @click="viewMode = 'preview'"
-                                :class="viewMode === 'preview' ? 'bg-white text-blue-600 shadow-sm' : 'text-gray-400 hover:text-gray-600'"
-                                class="p-1 rounded transition-all" title="Preview Only">
-                                <span class="material-symbols-rounded text-[18px] block">preview</span>
+                            <button @click="deleteNote(selectedNote.id)"
+                                class="text-red-400 hover:text-red-500 p-2 rounded hover:bg-red-50" title="Delete Note">
+                                <span class="material-symbols-rounded text-[20px]">delete</span>
                             </button>
                         </div>
-                        <button @click="toggleDarkMode"
-                            class="p-2 text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg transition-colors"
-                            :title="isDarkMode ? 'Light Mode' : 'Dark Mode'">
-                            <span class="material-symbols-rounded text-[20px]">{{ isDarkMode ? 'light_mode' :
-                                'dark_mode' }}</span>
-                        </button>
-                        <button @click="deleteNote(selectedNote.id)"
-                            class="text-red-400 hover:text-red-500 p-2 rounded hover:bg-red-50" title="Delete Note">
-                            <span class="material-symbols-rounded text-[20px]">delete</span>
-                        </button>
                     </div>
                 </div>
 
