--- a/static/index.html
+++ b/static/index.html
@@ -93,10 +93,11 @@
                 <!-- Folders & Notes -->
                 <div v-else>
                     <!-- Uncategorized Notes (Root) -->
-                    <div v-for="note in rootNotes" :key="note.id" @click="selectNote(note)" :class="selectedNote && selectedNote.id === note.id 
+                    <div v-for="note in rootNotes" :key="note.id" @click="selectNote(note)"
+                        :class="selectedNote && selectedNote.id === note.id 
                             ? 'bg-blue-200 border-blue-400 dark:bg-[#5E81AC] dark:border-[#81A1C1]' 
-                            : 'hover:bg-blue-50 border-transparent dark:hover:bg-[#4C566A]'"
-                        class="p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-colors">
+                            : 'bg-white shadow-sm border-slate-200 dark:bg-[#D1D5DA] dark:border-transparent hover:bg-blue-50 dark:hover:bg-[#E5E9F0]'"
+                        class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-colors">
                         <div class="flex items-center truncate flex-1 min-w-0">
                             <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0 dark:invert"
                                 alt="Markdown">
@@ -108,17 +109,17 @@
                                 class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-300 dark:border-[#88C0D0] rounded px-1 text-sm outline-none w-full dark:text-[#D8DEE9]">
                             <!-- Normal Title -->
                             <div v-else @dblclick.stop="startRename(note, 'note')"
-                                :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-white font-bold' : 'text-slate-700 dark:text-[#ECEFF4]'"
+                                :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-white font-bold' : 'text-slate-700 dark:text-slate-800'"
                                 class="text-sm truncate select-none">{{ note.title || 'Untitled' }}</div>
                         </div>
                         <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <button @click.stop="startRename(note, 'note')"
-                                class="text-slate-500 hover:text-blue-700 dark:text-[#D8DEE9] dark:hover:text-white p-1"
+                                class="text-slate-500 hover:text-blue-700 dark:text-slate-600 dark:hover:text-blue-600 p-1"
                                 title="Rename Note">
                                 <span class="material-symbols-rounded text-[16px]">edit</span>
                             </button>
                             <button @click.stop="deleteNote(note.id)"
-                                class="text-slate-500 hover:text-red-600 dark:text-[#D8DEE9] dark:hover:text-[#BF616A] p-1"
+                                class="text-slate-500 hover:text-red-600 dark:text-slate-600 dark:hover:text-red-600 p-1"
                                 title="Delete Note">
                                 <span class="material-symbols-rounded text-[16px]">delete</span>
                             </button>
@@ -128,7 +129,7 @@
                     <!-- Folders -->
                     <div v-for="folder in folders" :key="folder.id" class="mb-2">
                         <div
-                            class="flex items-center text-sm font-semibold text-slate-600 dark:text-[#ECEFF4] px-2 py-1 mb-1 group hover:bg-blue-50 dark:hover:bg-[#4C566A] rounded transition-colors cursor-pointer">
+                            class="flex items-center text-sm font-semibold h-10 text-slate-600 dark:text-slate-800 p-2 mb-1 group bg-white shadow-sm border border-slate-200 dark:bg-[#D1D5DA] dark:border-transparent hover:bg-blue-50 dark:hover:bg-[#E5E9F0] rounded rounded-md transition-colors cursor-pointer">
                             <img src="/static/icons/folder.svg" class="w-5 h-5 mr-2 dark:invert opacity-90"
                                 alt="Folder">
                             <!-- Rename Input -->
@@ -142,32 +143,36 @@
 
                             <div class="ml-auto opacity-0 group-hover:opacity-100 flex items-center transition-opacity">
                                 <button @click.stop="startRename(folder, 'folder')"
-                                    class="text-slate-500 hover:text-blue-700 dark:text-[#D8DEE9] dark:hover:text-white mr-1"
+                                    class="text-slate-500 hover:text-blue-700 dark:text-slate-600 dark:hover:text-blue-600 mr-1"
                                     title="Rename Folder">
                                     <span class="material-symbols-rounded text-[18px]">edit</span>
                                 </button>
                                 <button @click.stop="createNoteInFolder(folder.id)"
-                                    class="text-slate-500 hover:text-slate-800 dark:text-[#D8DEE9] dark:hover:text-white mr-1"
+                                    class="text-slate-500 hover:text-slate-800 dark:text-slate-600 dark:hover:text-slate-800 mr-1"
                                     title="Add Note to Folder">
                                     <span class="material-symbols-rounded text-[18px]">add</span>
                                 </button>
                                 <button @click.stop="deleteFolder(folder.id)"
-                                    class="text-slate-500 hover:text-red-600 dark:text-[#D8DEE9] dark:hover:text-[#BF616A]"
+                                    class="text-slate-500 hover:text-red-600 dark:text-slate-600 dark:hover:text-red-600"
                                     title="Delete Folder">
                                     <span class="material-symbols-rounded text-[16px]">delete</span>
                                 </button>
                             </div>
                         </div>
-                        <div class="pl-3 border-l-2 border-slate-200 dark:border-[#434C5E] ml-2">
+                        <div class="pl-3 border-l-2 border-slate-200 dark:border-white ml-2">
                             <div v-for="note in getFolderNotes(folder.id)" :key="note.id" @click="selectNote(note)"
                                 :class="selectedNote && selectedNote.id === note.id 
                                     ? 'bg-blue-200 border-blue-400 dark:bg-[#5E81AC] dark:border-[#81A1C1]' 
-                                    : 'bg-white dark:bg-[#2E3440] hover:bg-blue-50 border-transparent dark:hover:bg-[#4C566A]'"
-                                class="p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-colors">
+                                    : 'bg-white shadow-sm border-slate-200 dark:bg-[#D1D5DA] dark:border-transparent hover:bg-blue-50 dark:hover:bg-[#E5E9F0]'"
+                                class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-colors relative">
+                                <!-- Tree Connector -->
+                                <div
+                                    class="absolute -left-3 top-1/2 w-3 h-0.5 bg-slate-200 dark:bg-white -translate-y-1/2">
+                                </div>
+
                                 <div class="flex items-center truncate flex-1 min-w-0">
                                     <img src="/static/icons/markdown.svg" class="w-4 h-4 mr-2 flex-shrink-0 dark:invert"
                                         alt="Markdown">
-
                                     <!-- Rename Input -->
                                     <input v-if="renameState.id === note.id && renameState.type === 'note'"
                                         :id="'rename-input-note-' + note.id" v-model="renameState.name" @click.stop
@@ -175,17 +180,17 @@
                                         class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-300 dark:border-[#88C0D0] rounded px-1 text-sm outline-none w-full dark:text-[#D8DEE9]">
                                     <!-- Normal Title -->
                                     <div v-else @dblclick.stop="startRename(note, 'note')"
-                                        :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-white font-bold' : 'text-slate-700 dark:text-[#ECEFF4]'"
+                                        :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-white font-bold' : 'text-slate-700 dark:text-slate-800'"
                                         class="text-sm truncate select-none">{{ note.title || 'Untitled' }}</div>
                                 </div>
                                 <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
                                     <button @click.stop="startRename(note, 'note')"
-                                        class="text-slate-500 hover:text-blue-700 dark:text-[#D8DEE9] dark:hover:text-white p-1"
+                                        class="text-slate-500 hover:text-blue-700 dark:text-slate-600 dark:hover:text-blue-600 p-1"
                                         title="Rename Note">
                                         <span class="material-symbols-rounded text-[16px]">edit</span>
                                     </button>
                                     <button @click.stop="deleteNote(note.id)"
-                                        class="text-slate-500 hover:text-red-600 dark:text-[#D8DEE9] dark:hover:text-[#BF616A] p-1"
+                                        class="text-slate-500 hover:text-red-600 dark:text-slate-600 dark:hover:text-red-600 p-1"
                                         title="Delete Note">
                                         <span class="material-symbols-rounded text-[16px]">delete</span>
                                     </button>
