--- a/static/index.html
+++ b/static/index.html
@@ -51,32 +51,30 @@
 
         <!-- Sidebar -->
         <div :class="isSidebarOpen ? 'w-64' : 'w-0'"
-            class="bg-slate-50 dark:bg-[#3B4252] border-r border-slate-200 dark:border-[#434C5E] flex flex-col flex-shrink-0 transition-all duration-300 overflow-hidden">
+            class="bg-slate-50 border-r border-slate-200 flex flex-col flex-shrink-0 transition-all duration-300 overflow-hidden">
             <!-- Header -->
-            <div class="p-4 border-b border-slate-200 dark:border-[#434C5E] flex justify-between items-center">
+            <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50">
                 <div class="flex items-center gap-2">
-                    <h1 class="text-xl font-bold text-slate-700 dark:text-[#ECEFF4] tracking-wider">SHYNOTE</h1>
+                    <h1 class="text-xl font-bold text-slate-700 tracking-wider">SHYNOTE</h1>
                     <button @click="toggleDarkMode"
-                        class="p-1 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-full transition-colors"
+                        class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 rounded-full transition-colors"
                         :title="isDarkMode ? 'Light Mode' : 'Dark Mode'">
                         <span class="material-symbols-rounded text-[18px] block">{{ isDarkMode ? 'light_mode' :
                             'dark_mode' }}</span>
                     </button>
                 </div>
                 <div class="flex gap-2">
-                    <button @click="createFolder"
-                        class="p-1 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded relative group"
+                    <button @click="createFolder" class="p-1 hover:bg-slate-200 rounded relative group"
                         title="New Folder">
-                        <img src="/static/icons/folder.svg" class="w-6 h-6 dark:invert" alt="New Folder">
+                        <img src="/static/icons/folder.svg" class="w-5 h-5" alt="New Folder">
                         <div
                             class="absolute -bottom-1 -right-1 bg-white rounded-full p-0.5 shadow-sm border border-gray-100">
                             <span
                                 class="material-symbols-rounded text-[10px] text-gray-600 font-bold block leading-none">add</span>
                         </div>
                     </button>
-                    <button @click="createNote"
-                        class="p-1 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded relative group" title="New Note">
-                        <img src="/static/icons/markdown.svg" class="w-6 h-6 dark:invert" alt="New Note">
+                    <button @click="createNote" class="p-1 hover:bg-slate-200 rounded relative group" title="New Note">
+                        <img src="/static/icons/markdown.svg" class="w-5 h-5" alt="New Note">
                         <div
                             class="absolute -bottom-1 -right-1 bg-white rounded-full p-0.5 shadow-sm border border-gray-100">
                             <span
@@ -93,33 +91,34 @@
                 <!-- Folders & Notes -->
                 <div v-else>
                     <!-- Uncategorized Notes (Root) -->
-                    <div v-for="note in rootNotes" :key="note.id" @click="selectNote(note)"
-                        :class="selectedNote && selectedNote.id === note.id 
-                            ? 'bg-blue-200 border-blue-400 dark:bg-[#5E81AC] dark:border-[#81A1C1]' 
-                            : 'bg-white shadow-sm border-slate-200 dark:bg-[#D1D5DA] dark:border-transparent hover:bg-blue-50 dark:hover:bg-[#E5E9F0]'"
-                        class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-colors">
-                        <div class="flex items-center truncate flex-1 min-w-0">
-                            <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0 dark:invert"
-                                alt="Markdown">
+                    <!-- Uncategorized Notes (Root) -->
+                    <div v-for="note in rootNotes" :key="note.id" @click="selectNote(note)" :class="selectedNote && selectedNote.id === note.id 
+                            ? 'bg-blue-200 border-blue-400 shadow-md' 
+                            : 'bg-white shadow-md border-slate-200 hover:shadow-lg hover:bg-blue-50'"
+                        class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-all">
+                        <div class="flex items-center min-w-0 flex-1">
+                            <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0" alt="Markdown">
 
                             <!-- Rename Input -->
                             <input v-if="renameState.id === note.id && renameState.type === 'note'"
                                 :id="'rename-input-note-' + note.id" v-model="renameState.name" @click.stop
                                 @blur="saveRename" @keyup.enter="saveRename"
-                                class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-300 dark:border-[#88C0D0] rounded px-1 text-sm outline-none w-full dark:text-[#D8DEE9]">
-                            <!-- Normal Title -->
-                            <div v-else @dblclick.stop="startRename(note, 'note')"
-                                :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-white font-bold' : 'text-slate-700 dark:text-slate-800'"
-                                class="text-sm truncate select-none">{{ note.title || 'Untitled' }}</div>
+                                class="flex-1 bg-white border border-blue-300 rounded px-1 text-sm outline-none w-full">
+                            <!-- Normal Title & Date -->
+                            <div v-else class="flex flex-col flex-1 min-w-0" @dblclick.stop="startRename(note, 'note')">
+                                <div :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 font-bold' : 'text-slate-700'"
+                                    class="text-sm truncate select-none leading-tight">{{ note.title || 'Untitled' }}
+                                </div>
+                                <div class="text-[9px] text-slate-400 leading-none mt-0.5">{{
+                                    formatDate(note.updated_at) }}</div>
+                            </div>
                         </div>
                         <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <button @click.stop="startRename(note, 'note')"
-                                class="text-slate-500 hover:text-blue-700 dark:text-slate-600 dark:hover:text-blue-600 p-1"
-                                title="Rename Note">
+                                class="text-slate-500 hover:text-blue-700 p-1" title="Rename Note">
                                 <span class="material-symbols-rounded text-[16px]">edit</span>
                             </button>
-                            <button @click.stop="deleteNote(note.id)"
-                                class="text-slate-500 hover:text-red-600 dark:text-slate-600 dark:hover:text-red-600 p-1"
+                            <button @click.stop="deleteNote(note.id)" class="text-slate-500 hover:text-red-600 p-1"
                                 title="Delete Note">
                                 <span class="material-symbols-rounded text-[16px]">delete</span>
                             </button>
@@ -129,69 +128,67 @@
                     <!-- Folders -->
                     <div v-for="folder in folders" :key="folder.id" class="mb-2">
                         <div
-                            class="flex items-center text-sm font-semibold h-10 text-slate-600 dark:text-slate-800 p-2 mb-1 group bg-white shadow-sm border border-slate-200 dark:bg-[#D1D5DA] dark:border-transparent hover:bg-blue-50 dark:hover:bg-[#E5E9F0] rounded rounded-md transition-colors cursor-pointer">
-                            <img src="/static/icons/folder.svg" class="w-5 h-5 mr-2 dark:invert opacity-90"
-                                alt="Folder">
+                            class="flex items-center text-sm font-semibold h-10 text-slate-600 p-2 mb-1 group bg-white shadow-md border border-slate-200 hover:shadow-lg hover:bg-blue-50 rounded transition-all cursor-pointer">
+                            <img :src="getFolderNotes(folder.id).length > 0 ? '/static/icons/folder-open.svg' : '/static/icons/folder.svg'"
+                                class="w-5 h-5 mr-2 opacity-90" alt="Folder">
                             <!-- Rename Input -->
                             <input v-if="renameState.id === folder.id && renameState.type === 'folder'"
                                 :id="'rename-input-folder-' + folder.id" v-model="renameState.name" @click.stop
                                 @blur="saveRename" @keyup.enter="saveRename"
-                                class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-300 dark:border-[#88C0D0] rounded px-1 text-sm outline-none dark:text-[#D8DEE9]">
+                                class="flex-1 bg-white border border-blue-300 rounded px-1 text-sm outline-none">
                             <!-- Normal Name -->
                             <span v-else @dblclick.stop="startRename(folder, 'folder')"
                                 class="truncate flex-1 select-none">{{ folder.name }}</span>
 
                             <div class="ml-auto opacity-0 group-hover:opacity-100 flex items-center transition-opacity">
                                 <button @click.stop="startRename(folder, 'folder')"
-                                    class="text-slate-500 hover:text-blue-700 dark:text-slate-600 dark:hover:text-blue-600 mr-1"
-                                    title="Rename Folder">
+                                    class="text-slate-500 hover:text-blue-700 mr-1" title="Rename Folder">
                                     <span class="material-symbols-rounded text-[18px]">edit</span>
                                 </button>
                                 <button @click.stop="createNoteInFolder(folder.id)"
-                                    class="text-slate-500 hover:text-slate-800 dark:text-slate-600 dark:hover:text-slate-800 mr-1"
-                                    title="Add Note to Folder">
+                                    class="text-slate-500 hover:text-slate-800 mr-1" title="Add Note to Folder">
                                     <span class="material-symbols-rounded text-[18px]">add</span>
                                 </button>
-                                <button @click.stop="deleteFolder(folder.id)"
-                                    class="text-slate-500 hover:text-red-600 dark:text-slate-600 dark:hover:text-red-600"
+                                <button @click.stop="deleteFolder(folder.id)" class="text-slate-500 hover:text-red-600"
                                     title="Delete Folder">
                                     <span class="material-symbols-rounded text-[16px]">delete</span>
                                 </button>
                             </div>
                         </div>
-                        <div class="pl-3 border-l-2 border-slate-200 dark:border-white ml-2">
+                        <div class="pl-3 border-l-2 border-slate-200 ml-2">
                             <div v-for="note in getFolderNotes(folder.id)" :key="note.id" @click="selectNote(note)"
                                 :class="selectedNote && selectedNote.id === note.id 
-                                    ? 'bg-blue-200 border-blue-400 dark:bg-[#5E81AC] dark:border-[#81A1C1]' 
-                                    : 'bg-white shadow-sm border-slate-200 dark:bg-[#D1D5DA] dark:border-transparent hover:bg-blue-50 dark:hover:bg-[#E5E9F0]'"
-                                class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-colors relative">
+                                    ? 'bg-blue-200 border-blue-400 shadow-md' 
+                                    : 'bg-white shadow-md border-slate-200 hover:shadow-lg hover:bg-blue-50'"
+                                class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-all relative">
                                 <!-- Tree Connector -->
-                                <div
-                                    class="absolute -left-3 top-1/2 w-3 h-0.5 bg-slate-200 dark:bg-white -translate-y-1/2">
-                                </div>
+                                <div class="absolute -left-3 top-1/2 w-3 h-0.5 bg-slate-200 -translate-y-1/2"></div>
 
-                                <div class="flex items-center truncate flex-1 min-w-0">
-                                    <img src="/static/icons/markdown.svg" class="w-4 h-4 mr-2 flex-shrink-0 dark:invert"
+                                <div class="flex items-center min-w-0 flex-1">
+                                    <img src="/static/icons/markdown.svg" class="w-4 h-4 mr-2 flex-shrink-0"
                                         alt="Markdown">
                                     <!-- Rename Input -->
                                     <input v-if="renameState.id === note.id && renameState.type === 'note'"
                                         :id="'rename-input-note-' + note.id" v-model="renameState.name" @click.stop
                                         @blur="saveRename" @keyup.enter="saveRename"
-                                        class="flex-1 bg-white dark:bg-[#2E3440] border border-blue-300 dark:border-[#88C0D0] rounded px-1 text-sm outline-none w-full dark:text-[#D8DEE9]">
-                                    <!-- Normal Title -->
-                                    <div v-else @dblclick.stop="startRename(note, 'note')"
-                                        :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-white font-bold' : 'text-slate-700 dark:text-slate-800'"
-                                        class="text-sm truncate select-none">{{ note.title || 'Untitled' }}</div>
+                                        class="flex-1 bg-white border border-blue-300 rounded px-1 text-sm outline-none w-full">
+                                    <!-- Normal Title & Date -->
+                                    <div v-else class="flex flex-col flex-1 min-w-0"
+                                        @dblclick.stop="startRename(note, 'note')">
+                                        <div :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 font-bold' : 'text-slate-700'"
+                                            class="text-sm truncate select-none leading-tight">{{ note.title ||
+                                            'Untitled' }}</div>
+                                        <div class="text-[9px] text-slate-400 leading-none mt-0.5">{{
+                                            formatDate(note.updated_at) }}</div>
+                                    </div>
                                 </div>
                                 <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
                                     <button @click.stop="startRename(note, 'note')"
-                                        class="text-slate-500 hover:text-blue-700 dark:text-slate-600 dark:hover:text-blue-600 p-1"
-                                        title="Rename Note">
+                                        class="text-slate-500 hover:text-blue-700 p-1" title="Rename Note">
                                         <span class="material-symbols-rounded text-[16px]">edit</span>
                                     </button>
                                     <button @click.stop="deleteNote(note.id)"
-                                        class="text-slate-500 hover:text-red-600 dark:text-slate-600 dark:hover:text-red-600 p-1"
-                                        title="Delete Note">
+                                        class="text-slate-500 hover:text-red-600 p-1" title="Delete Note">
                                         <span class="material-symbols-rounded text-[16px]">delete</span>
                                     </button>
                                 </div>
@@ -210,16 +207,21 @@
                 <!-- Toolbar -->
                 <div
                     class="h-14 border-b border-slate-100 dark:border-[#434C5E] bg-white/80 dark:bg-[#2E3440]/80 backdrop-blur-sm sticky top-0 z-30 flex justify-between items-center px-4 flex-shrink-0 transition-colors duration-300">
-                    <div class="flex items-center w-full mr-4">
+                    <div class="flex items-center w-full mr-4 overflow-hidden">
                         <button @click="toggleSidebar"
                             class="p-2 mr-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-colors flex-shrink-0"
                             title="Toggle Sidebar">
                             <span class="material-symbols-rounded">{{ isSidebarOpen ? 'keyboard_double_arrow_left' :
                                 'keyboard_double_arrow_right' }}</span>
                         </button>
-                        <input v-model="selectedNote.title" @input="debouncedUpdate"
-                            class="text-lg font-bold text-slate-800 dark:text-[#ECEFF4] outline-none w-full bg-transparent placeholder-slate-300 dark:placeholder-[#434C5E]"
-                            placeholder="Note Title">
+                        <div class="flex items-baseline gap-3 flex-1 min-w-0">
+                            <input v-model="selectedNote.title" @input="debouncedUpdate"
+                                class="text-lg font-bold text-slate-800 dark:text-[#ECEFF4] outline-none bg-transparent placeholder-slate-300 dark:placeholder-[#434C5E] min-w-0 flex-1"
+                                placeholder="Note Title">
+                            <span class="text-xs text-slate-400 dark:text-slate-500 whitespace-nowrap hidden sm:block">
+                                Last edited: {{ formatDate(selectedNote.updated_at) }}
+                            </span>
+                        </div>
                     </div>
                     <div class="flex items-center gap-2 flex-shrink-0">
 
