--- a/static/index.html
+++ b/static/index.html
@@ -84,7 +84,7 @@
             <!-- Header -->
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 flex-shrink-0">
                 <h1 class="text-xl font-bold text-slate-700 tracking-wider">
-                    <a href="/">SHYNOTE</a>
+                    <a :href="homeUrl">SHYNOTE</a>
                 </h1>
                 <button @click="toggleDarkMode"
                     class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 rounded-full transition-colors"
