--- a/static/index.html
+++ b/static/index.html
@@ -239,7 +239,13 @@
                             draggable="true" @dragstart="handleDragStart(note)"
                             class="text-sm h-10 p-2 mb-2 cursor-pointer border rounded-md flex items-center group justify-between transition-all">
                             <div class="flex items-center min-w-0 flex-1">
-                                <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0" alt="Markdown">
+                                <!-- Pin Icon (Replaces Markdown Icon) -->
+                                <button @click.stop="togglePin(note)" class="mr-2 flex-shrink-0 focus:outline-none"
+                                    :title="note.is_pinned ? 'Unpin Note' : 'Pin Note'">
+                                    <span class="material-symbols-rounded text-[20px]"
+                                        :class="note.is_pinned ? 'text-orange-500 fill-current' : 'text-slate-300 hover:text-slate-500'"
+                                        :style="note.is_pinned ? 'font-variation-settings: \'FILL\' 1' : ''">push_pin</span>
+                                </button>
 
                                 <!-- Rename Input -->
                                 <input v-if="renameState.id === note.id && renameState.type === 'note'"
@@ -263,6 +269,8 @@
                                     class="text-slate-500 hover:text-blue-700 p-1" title="Rename Note">
                                     <span class="material-symbols-rounded text-[16px]">edit</span>
                                 </button>
+
+
                                 <button @click.stop="deleteNote(note.id)" class="text-slate-500 hover:text-red-600 p-1"
                                     title="Delete Note">
                                     <span class="material-symbols-rounded text-[16px]">delete</span>
@@ -315,8 +323,13 @@
                                 <div class="absolute -left-3 top-1/2 w-3 h-0.5 bg-slate-200 -translate-y-1/2"></div>
 
                                 <div class="flex items-center min-w-0 flex-1">
-                                    <img src="/static/icons/markdown.svg" class="w-4 h-4 mr-2 flex-shrink-0"
-                                        alt="Markdown">
+                                    <!-- Pin Icon (Replaces Markdown Icon) -->
+                                    <button @click.stop="togglePin(note)" class="mr-2 flex-shrink-0 focus:outline-none"
+                                        :title="note.is_pinned ? 'Unpin Note' : 'Pin Note'">
+                                        <span class="material-symbols-rounded text-[18px]"
+                                            :class="note.is_pinned ? 'text-orange-500 fill-current' : 'text-slate-300 hover:text-slate-500'"
+                                            :style="note.is_pinned ? 'font-variation-settings: \'FILL\' 1' : ''">push_pin</span>
+                                    </button>
                                     <!-- Rename Input -->
                                     <input v-if="renameState.id === note.id && renameState.type === 'note'"
                                         :id="'rename-input-note-' + note.id" v-model="renameState.name" @click.stop
@@ -338,6 +351,7 @@
                                         class="text-slate-500 hover:text-blue-700 p-1" title="Rename Note">
                                         <span class="material-symbols-rounded text-[16px]">edit</span>
                                     </button>
+
                                     <button @click.stop="deleteNote(note.id)"
                                         class="text-slate-500 hover:text-red-600 p-1" title="Delete Note">
                                         <span class="material-symbols-rounded text-[16px]">delete</span>
